--- a/gb/22/10/27/n13854226.md
+++ b/gb/22/10/27/n13854226.md
@@ -1,20 +1,22 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【财商天下】金融时报：英国经济危机始于脱欧</h2>
-<a href="https://d7b58bkqqk9ju.cloudfront.net/B2sGLvisf"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2022/10/id13854227-9732b70794daa2075bd5263b096054e9-600x400.jpg" />///image2=```diff
+- 政府赤字是去年3倍！个人致富时代在消失，富豪纷纷逃生。大数据独角兽企业裁员7成。英国经济危机源自脱欧？胡锦涛被架走内幕流出？（大纪元制图）
+```
 <h6>政府赤字是去年3倍！个人致富时代在消失，富豪纷纷逃生。大数据独角兽企业裁员7成。英国经济危机源自脱欧？胡锦涛被架走内幕流出？（大纪元制图）
 </h6>
 <hr>
 	<p>【大纪元2022年10月28日讯】大家好，欢迎来到《财商天下》的热点资讯。今天的内容有：</p>
-<p>, <ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%83%A1%E9%94%A6%E6%B6%9B.md#1">胡锦涛</a>被架走是因胡春华？二十大后继续政治大清洗<br />
+<p>, 胡锦涛被架走是因胡春华？二十大后继续政治大清洗<br />
 , 中共预算赤字7万亿元人民币 是去年同期的3倍<br />
-, 个人致富时代正在消失 中港<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%AF%8C%E8%B1%AA.md#1">富豪</a>开启逃生计划<br />
-, 中国AI独角兽企业 明略科技或大幅<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%A3%81%E5%91%98.md#1">裁员</a>七成<br />
+, 个人致富时代正在消失 中港富豪开启逃生计划<br />
+, 中国AI独角兽企业 明略科技或大幅裁员七成<br />
 , 并非疫情与俄乌战争拖累英国经济 金融时报：危机源自脱欧</p>
 <p>现在，我们就进入今天的热点。</p>
-<p><a title="YouTube video player" src=""></a><a href="https://d7b58bkqqk9ju.cloudfront.net/B2sGLvisf"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/DWwEp9jyrOQ" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
-<h2><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%83%A1%E9%94%A6%E6%B6%9B.md#1">胡锦涛</a>被架走是因胡春华？二十大后继续政治大清洗</h2>
+<p><a title="YouTube video player" src=""></a><a href="https://d348xnvyypk4sr.cloudfront.net/B8fGLvism"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/DWwEp9jyrOQ" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+<h2>胡锦涛被架走是因胡春华？二十大后继续政治大清洗</h2>
 <p>最近几天，有关中共二十大上胡锦涛被“架走”、团派被“清零”以及习家军全面上位的话题持续发酵。10月25日，和中共体制内高官有联系的，中国民主党全国委员会主席王军涛透露，他获得的消息，解释了有关胡锦涛为何在闭幕会议期间被请走的内幕。</p>
 <p>据王军涛得到的消息，习本来跟胡锦涛达成协议，让李克强、汪洋留任，胡春华也入常，同时“两个确立”可以入党章。但临开会前，习近平却突然提出，胡春华不能入常，他想把另一个人推进常委会，但仍要让“两个确立”入党章。胡锦涛就不干了，威胁说，“要是小胡（胡春华）不能入常，两个确立也不能入党章，李克强和汪洋也都辞职”。但没想到，习近平就直接全换上了自己的人。</p>
 <p>另外，还有一点不能忽略。这次中共新一届的政治局委员由25人变24人，却没有候补委员，也非常蹊跷。按照中共的惯例，为避免在表决中出现僵局，委员人数一般是奇数；当委员人数是偶数时，则有候补委员。照这样来看，政治局委员25人中的某一人，很有可能是在最后一刻被拿下的。</p>
@@ -34,7 +36,7 @@
 <p>港口运货量方面，据中国港口协会的数据显示，10月1日至10日，八个主要港口的货柜吞吐量比去年同期下降了7.3%。</p>
 <p>公路运货量方面，野村证券（Nomura）表示，10月21日公路货物运输量同比下降了26.2%，而前一周同比下降是23.7%。</p>
 <p>经济咨询公司龙洲经讯（GaveKal Dragonomics）的中国研究团队表示，在可预见的未来，动态“清零”的防疫策略可能会保持不变，因此中国的消费情况不太可能反弹。</p>
-<h2>个人致富时代正在消失 中港<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%AF%8C%E8%B1%AA.md#1">富豪</a>开启逃生计划</h2>
+<h2>个人致富时代正在消失 中港富豪开启逃生计划</h2>
 <p>中共二十大结束后，习近平亲信组成的中共最高领导班子让市场感到担忧，香港股市应声灾难性大跌超过6%。而中国富豪一天之间财富损失高达350亿美元。</p>
 <p>香港股恒生指数10月24日跌了1,030点，其中腾讯和阿里巴巴都跌了11.4%，美团更是跌了14.8%。</p>
 <p>此外，同一天在美国上市的中概股拼多多盘中一度暴跌34.2%，全日跌幅24.6%，当日市值蒸发183.5亿美元。</p>
@@ -44,11 +46,11 @@
 <p>财经专家财子表示，“国进民退”将会持续。他说，在大陆，没有独立的法律制度，当民营企业成为当局的打击对像时，企业家难以保护自己及其财富。而腾讯、阿里巴巴、百度等公司的情况会更糟，因为它们拥有太多的个人数据，包括高级官员或他们的家人的微信、购物、地图使用纪录等，这令中共高层感到不安。</p>
 <p>他认为，创造力不再受到欢迎，中国经济将大幅倒退，个人致富的时代正在消失。很多民企老板正在倒下。超级富豪会继续竭尽全力逃离中国，这对中国国内消费及奢侈品市场都非常不利。</p>
 <p>据英国《金融时报》报导，与中国和香港富豪家族都有过合作的欧洲律师莱斯佩兰斯（David Lesperance）披露，习近平的连任，让中国富豪纷纷外逃，他已经收到了来自多个超高净值中国企业家族的指令，开启他们的逃生计划。</p>
-<h2>中国AI独角兽企业 明略科技或大幅<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%A3%81%E5%91%98.md#1">裁员</a>七成</h2>
-<p>受“清零”措施等多种因素影响，近期，中国企业裁员消息不断。独角兽<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A4%A7%E6%95%B0%E6%8D%AE.md#1">大数据</a>企业明略科技的多名员工日前披露，该公司七成以上员工被解雇，研发基地解散。</p>
+<h2>中国AI独角兽企业 明略科技或大幅裁员七成</h2>
+<p>受“清零”措施等多种因素影响，近期，中国企业裁员消息不断。独角兽大数据企业明略科技的多名员工日前披露，该公司七成以上员工被解雇，研发基地解散。</p>
 <p>据大陆公众号“智东西”10月25日消息，多位“被离职”的原明略科技的员工披露，一年多的时间里，明略科技已有多轮裁员，多个部门减少五成员工，有的全线被裁。</p>
 <p>此外，有员工表示，明略科技之前说2021年的年终奖延后至2022年第三季度发放，但现在已经是第四季了，她仍未拿到年终奖，该员工已经向明略科技发起劳动仲裁。据悉，明略科技拖欠的不但有年终奖，还有裁员的赔偿金。</p>
-<p>2014年成立的明略科技，致力于线上<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A4%A7%E6%95%B0%E6%8D%AE.md#1">大数据</a>分析挖掘和认知智能技术。这家公司曾一度成为中国估值最高的大数据公司，腾讯、红杉中国等都是其重要的股东。</p>
+<p>2014年成立的明略科技，致力于线上大数据分析挖掘和认知智能技术。这家公司曾一度成为中国估值最高的大数据公司，腾讯、红杉中国等都是其重要的股东。</p>
 <p>有员工爆料说，研发部门已经解散，并裁去了数字城市、金融业务线等部门，目前只剩其主要盈利项目秒针业务线。不过有知情人士透露，秒针业务线也裁员50%。该公司巅峰时期有五、六千人，裁员后仅剩下一千多人。</p>
 <p>有金融学者表示，作为中共政府依赖的高科技领域，明略科技大规模裁员现象非常罕见。这说明，即使很有活力的企业，现在也开始丧失其优势。在经济学界这是一个经济体出现全面衰退、活力丧失的先兆。明略科技在整个AI行业中具有代表性，裁员绝不是它一个企业出现问题。</p>
 <h2>并非疫情与俄乌战争拖累英经济 金融时报：危机源自脱欧</h2>
@@ -69,44 +71,35 @@
 <p>责任编辑：连书华</p>
 	
 <hr>
-<hr>
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/21/n13850408.md#1">【财商天下】二十大信号：清零开路 计划经济走向2.0</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/24/n13852039.md#1">【财商天下】供销社死灰复燃 计划经济已回归？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/25/n13852700.md#1">【财商天下】日圆贬物价涨 日本经济步履艰难</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/26/n13853493.md#1">【财商天下】买入中共垃圾芯片 俄罗斯哑巴吃黄莲</a></li>
-<hr>
-
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/21/n13850408.md#1">【财商天下】二十大信号：清零开路 计划经济走向2.0</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/24/n13852039.md#1">【财商天下】供销社死灰复燃 计划经济已回归？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/25/n13852700.md#1">【财商天下】日圆贬物价涨 日本经济步履艰难</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/26/n13853493.md#1">【财商天下】买入中共垃圾芯片 俄罗斯哑巴吃黄莲</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/18/n11329746.md#1" target="_blank">传奇总统里根（10）：一封家书承载使命</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/9/14/n3683060.md#1" target="_blank">【石静笛】：网在收！活摘器官再成舆论焦点</a></li><hr>
-
-
+<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/23/n10242561.md#1" target="_blank">袁斌：方志敏的“清贫”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/24/n10424628.md#1" target="_blank">一位女商人的自白 她曾为自己准备葬礼</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/15/n13973563.md#1">【未解之谜】血型中的创世之谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/11/n13970800.md#1">【未解之谜】7万大军压境 只为抢一僧人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/9/n13968604.md#1">济公和尚破衣破扇 如何大显神通？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/15/n13973255.md#1">从彼得兔到兔儿爷，一路陪伴，危难救助</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957761.md#1">【古道人生】救人三命 天赐白银两坛</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/18/n13975604.md#1">【军事热点】乌克兰暗示将在克里米亚使用新武器</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/14/n13973040.md#1">【百年真相】北平和谈第一功臣 为何祸及三代？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/17/n13975158.md#1">【报料传真】台商：工厂被封 中国经济衰退无救</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/13/n13971680.md#1">Costco自产品牌物美价廉 你不知道的七件事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/12/n13970837.md#1">美海军有三种强大武器 可置中共航母于险境</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/16/n13973940.md#1">王友群：刘亚洲到底为什么沦为“阶下囚”？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/16/n13974374.md#1">杨紫琼带小金人赴港 宴请周润发黄秋生等恩人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/17/n13975247.md#1">黄晓明上节目执意穿皮鞋比赛 鞋底厚度引关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/16/n13974358.md#1">第41届香港金像奖揭晓 刘青云郑秀文封帝后</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/17/n13975159.md#1">念不出金像奖获奖者大名 香港颁奖明星陷尴尬</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/17/n13975204.md#1">分手4年突按赞有关李晨帖文 范冰冰发文回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/16/n13973971.md#1">群山环抱海拔3454米 欧洲最高火车站在瑞士</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/15/n13973573.md#1">想种木兰花吗？这些品种你要了解</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/15/n13973238.md#1">菠菜防白内障 与豆腐同食会结石？答案令你意外</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/15/n13973744.md#1">纽约春日赏樱攻略 7大赏花地点不容错过</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/17/n13974855.md#1">你的小孩是天才吗？ 专家：可从5个迹象判断</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300489.md#1">“别人”做的饭菜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306146.md#1">老花 近视 飞蚊症 干眼症 中医7招应对眼疾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306766.md#1">【全球新闻】乌克兰跨境攻入俄罗斯 数千人撤离</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14306935.md#1">【新闻欣视角】新冠病毒警报再响 两变异株来势汹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306092.md#1">华人餐桌的美味 蓝蟹为何令意大利政府头疼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305720.md#1">【更新】2024年巴黎奥运奖牌榜 8月6日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306732.md#1">章子怡带儿女出游 炎炎夏日陪玩全身包裹严实</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307570.md#1">黄晓明贺表妹陈梦奥运夺冠 却遭友人诡异吐槽</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306062.md#1">徐峥新片《逆行人生》遭一影院抵制 引热议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305693.md#1">飞机快起飞了还在排安检怎么办？旅游达人提2方法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306209.md#1">营养师推荐一传统小吃 钙含量高豆浆25倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305481.md#1">补充水分小心喝下细菌毒素 这4种水不要喝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302749.md#1">肾功能不及格的10大征兆 多注意可预防洗肾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300518.md#1">超级保健卫士：黑蒜? 壮体 抗癌</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/10/27/n13854226.htm">【财商天下】金融时报：英国经济危机始于脱欧</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/10/27/n13854226.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/10/27/n13854226.htm">【财商天下】金融时报：英国经济危机始于脱欧</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/10/27/n13854226.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
